[gd_scene load_steps=5 format=3 uid="uid://dvh0g2gcgnlaf"]

[ext_resource type="Script" path="res://scripts/select.gd" id="1_0i0tj"]
[ext_resource type="Texture2D" uid="uid://cqvrch6wkqk88" path="res://assets/characters/boomer.webp" id="1_hv44i"]
[ext_resource type="Texture2D" uid="uid://c30b7c0wrpqnm" path="res://assets/characters/karen-portrait.webp" id="2_a7u2y"]
[ext_resource type="Texture2D" uid="uid://1ayo68cpecnh" path="res://assets/characters/gigachad.webp" id="3_fm5jw"]

[node name="Select" type="Node2D"]
script = ExtResource("1_0i0tj")

[node name="Label" type="Label" parent="."]
offset_right = 1921.0
offset_bottom = 195.0
theme_override_font_sizes/font_size = 120
text = "Last Meme Standing"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Boomer" type="TextureButton" parent="."]
offset_left = 283.0
offset_top = 301.0
offset_right = 941.0
offset_bottom = 1337.0
scale = Vector2(0.5, 0.5)
mouse_default_cursor_shape = 2
texture_normal = ExtResource("1_hv44i")

[node name="Karen" type="TextureButton" parent="."]
offset_left = 870.0
offset_top = 304.0
offset_right = 1299.0
offset_bottom = 1374.0
scale = Vector2(0.5, 0.5)
mouse_default_cursor_shape = 2
texture_normal = ExtResource("2_a7u2y")

[node name="Gigachad" type="TextureButton" parent="."]
offset_left = 1298.0
offset_top = 301.0
offset_right = 2073.0
offset_bottom = 1391.0
scale = Vector2(0.5, 0.5)
mouse_default_cursor_shape = 2
texture_normal = ExtResource("3_fm5jw")

[connection signal="pressed" from="Boomer" to="." method="_on_boomer_pressed"]
[connection signal="pressed" from="Karen" to="." method="_on_karen_pressed"]
[connection signal="pressed" from="Gigachad" to="." method="_on_gigachad_pressed"]
